--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-.bundle/
-log/*.log
-pkg/
-test/dummy/db/*.sqlite3
-test/dummy/db/*.sqlite3-journal
-test/dummy/log/*.log
-test/dummy/tmp/
-test/dummy/.sass-cache
+*.gem
+.bundle
+Gemfile.lock
+gemfiles/*.lock
+pkg/*
+bin
+vendor/ruby
+gemfiles/vendor/ruby
+.rbenv-version
+.sass-cache
